<resources>
    <string name="app_name">Wagba</string>
    <string name="login_status">Login to your account</string>
    <string name="sign_up_status">Create your account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sing_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="num">0</string>
    <string name="gate">Gate</string>
    <string name="gate_A">A</string>
    <string name="gate_B">B</string>
    <string name="time">Time</string>
    <string name="time_12">12 PM</string>
    <string name="time_3">3 PM</string>
    <string name="confirm">Confirm</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>